syntax = "proto3";

message ChatMessage {
  string message = 1;
  string from_user_id = 2;
  string to_user_id = 3;
  string attachment_url  = 4;
  string channel_name = 5;
}
